@@ -7,173 +7,15 @@ from sqlobject import *
 import bauble.utils as utils
 import bauble.paths as paths
 import bauble
-from bauble.plugins import BaubleTable, tables, editors
+from bauble.plugins import tables, editors
 from bauble.treevieweditor import TreeViewEditorDialog, ComboColumn, TextColumn
 from bauble.editor import *
 from bauble.utils.log import log, debug
 import xml.sax.saxutils as sax
-#from speciesmeta import SpeciesMeta
+from bauble.plugins.plants.species_model import Species, SpeciesMeta, \
+    SpeciesSynonym, VernacularName
 
-# TODO: SpeciesMetaEditor isn't modal on the SpeciesEditor
-    
-#
-# Species table
-#
-class Species(BaubleTable):
-
-    class sqlmeta(BaubleTable.sqlmeta):
-        defaultOrder = 'sp'
-    
-    def __init__(self, **kw):
-        super(Species, self).__init__(**kw)
-        self.__cached_str = None
-        
-    # TODO: create an index from sp_hybrid, sp_qual, sp, sp_author, cv_group, 
-    # isp, isp_author, isp_rank, genus
-    #species_index = DatabaseIndex('genus', 'sp', 'sp_author', 'sp_hybrid', 
-    #                             'sp_qual', 'cv_group', 'infrasp', 
-    #                             'infrasp_author', 'infrasp_rank')
-    sp = StringCol(length=40, notNull=True)          # specific epithet
-    sp_author = UnicodeCol(default=None)  # species author    
-    sp_hybrid = EnumCol(enumValues=("H", "x", "+",None), default=None)     
-    sp_qual = EnumCol(enumValues=("agg.", "s.lat.", "s. str.", None), 
-                      default=None)                                                
-    
-    cv_group = StringCol(length=50, default=None)    # cultivar group                        
-    infrasp = StringCol(length=30, default=None)         # intraspecific epithet
-    infrasp_author = UnicodeCol(length=255, default=None) # intraspecific author
-    '''
-    subsp. - subspecies
-    var. - variety
-    subvar. - sub variety
-    f. - form
-    subf. - subform
-    cv. - cultivar
-    '''
-    infrasp_rank = EnumCol(enumValues=("subsp.", "var.", "subvar.", "f.", 
-                                       "subf.",  "cv.", None), default=None)    
-    '''
-    "aff.", # Akin to or bordering
-    "cf.", # compare with
-    "Incorrect", # Incorrect
-    "forsan", # Perhaps
-    "near", # Close to
-    "?", # Quesionable
-    '''
-    id_qual = EnumCol(enumValues=("aff.", "cf.", "Incorrect", "forsan", "near", 
-                                  "?", None), default=None)    
-    notes = UnicodeCol(default=None)
-    
-    # foreign keys
-    #
-    default_vernacular_name = ForeignKey('VernacularName', default=None)#, 
-                                         #cascade=True)
-    genus = ForeignKey('Genus', notNull=True, cascade=False)
-    
-
-    # joins
-    #
-    # hold meta information about this plant
-    species_meta = SingleJoin('SpeciesMeta', joinColumn='species_id')
-    synonyms = MultipleJoin('SpeciesSynonym', joinColumn='species_id')
-    # it would be best to display the vernacular names in a dropdown list
-    # with a way to add to the list    
-    # FIXME: what happens if to the value in default_vernacular_name if 
-    # we delete the object that this foreign key points to, should somehow
-    # get reset to None
-    vernacular_names = MultipleJoin('VernacularName', joinColumn='species_id')
-    #accessions = MultipleJoin('Accessions', joinColumn='species_id')
-    #images = MultipleJoin('Images', joinColumn='species_id')
-    #references = MultipleJoin('Reference', joinColumn='species_id')
-    
-    def __str__(self):
-        # we'll cache the str(self) since building it is relatively heavy
-        # TODO: we can't enable this until we can invalidated _cached_str in
-        # cache self is changed
-        #if self.__cached_str is None:
-        #    self.__cached_str = Species.str(self)
-        #return self.__cached_str        
-        return Species.str(self)
-    
-    
-    def markup(self, authors=False):
-        return Species.str(self, authors, True)
-    
-    
-    @staticmethod
-    def str(species, authors=False, markup=False):
-        """
-        return the full plant name string
-        NOTE: it may be better to create a separate method for the markup
-        since substituting into the italic make slow things down, should do 
-        some benchmarks. also, which is faster, doing substitution this way or
-        by using concatenation
-        """    
-        # TODO: should do a translation table for any entities that might
-        # be in the author strings and use translate, what else besided 
-        # ampersand could be in the author name
-        # TODO: how complete is this for the latest nomenclature code?
-        # TODO: optimize: (1) be sure to use % substitution in instead of +=, 
-        # (2) maybe create the name in parts and return them all combined in 
-        # the end
-        # TODO: create tests for all possible name combinations 
-        #genus, sp_hybrid, id_qual, sp, sp_hybrid, infrasp, cv_group
-        if markup:
-            italic = "<i>%s</i>"
-	    escape = sax.escape
-        else:
-            italic = "%s"
-	    escape = lambda x: x        
-        name = italic % str(species.genus)
-
-        # id qualifier
-        if species.id_qual:
-            name += " %s" % species.id_qual
-            
-        # take care of species hybrid
-        if species.sp_hybrid:
-            # we don't have a second sp name for the hyrbid formula right now
-            # so we'll just use the isp for now
-            if species.infrasp is not None:
-                name += " %s %s %s " % (italic % species.sp, 
-                                        species.sp_hybrid,
-                                        italic % species.infrasp)
-            else:
-                name += ' %s %s' % (species.sp_hybrid or '', species.sp)
-        else:
-            name = ' '.join([name, italic % species.sp])
-            
-        # cultivar groups and cultivars
-        if species.cv_group is not None:
-            if species.infrasp_rank == "cv.":
-                name += ' (' + species.cv_group + " Group) '" + \
-                italic % species.infrasp + "'"
-            else: 
-                name += ' ' + species.cv_group + ' Group'
-            return name
-        
-        if species.sp_author is not None and authors is not False:
-            #name += ' ' + species.sp_author.replace('&', '&amp;')
-            name += ' ' + escape(species.sp_author)
-        
-        if species.infrasp_rank:
-            if species.infrasp_rank == "cv.":
-                name += " '" + species.infrasp + "'"
-            else:
-                name = '%s %s %s' % (name, species.infrasp_rank, 
-                                     italic % species.infrasp)
-                if species.infrasp_author is not None and authors is not False:
-                    name += ' ' + escape(species.infrasp_author)
-        return name
-    
-
-    
-class SpeciesSynonym(BaubleTable):
-    # deleting either of the species this synonym refers to makes
-    # this synonym irrelevant
-    species = ForeignKey('Species', default=None, cascade=True)
-    synonym = ForeignKey('Species', cascade=True)
-    
+# TODO: SpeciesMetaEditor isn't modal on the SpeciesEditor    
 
 class SpeciesEditorPresenter(GenericEditorPresenter):
     
